// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Collapsible /> should render with CollapsibleButton 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="collapsible"
  >
    <div
      class="BaseBox-bmPWx iBXzln"
      data-blade-component="base-box"
    >
      <button
        aria-controls="collapsible-body-1"
        aria-expanded="false"
        class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 dOlUqh"
        data-blade-component="button"
        role="button"
        type="button"
      >
        <div
          class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
          data-blade-component="base-box"
        >
          <div
            class="StyledBaseText-dVBfTO brGLEM"
            data-blade-component="base-text"
          >
            View Price Breakdown
          </div>
        </div>
      </button>
      <div
        aria-hidden="true"
        class="BaseBox-bmPWx"
        data-blade-component="collapsible-body"
        id="collapsible-body-1"
        role="region"
      >
        <div
          class="CollapsibleBodyContentweb__StyledCollapsibleBodyContent-sc-1oi3ngc-0 zckFh"
        >
          <div
            class="BaseBox-bmPWx hgWdUa"
            data-blade-component="box"
          >
            <div
              class="BaseBox-bmPWx lmtAaL"
              data-blade-component="box"
            >
              <p
                class="StyledBaseText-dVBfTO eIdQFo"
                data-blade-component="text"
              >
                Actual amount
              </p>
              <div
                class="BaseBox-bmPWx bcSLaJ"
                data-blade-component="amount"
              >
                <div
                  class="BaseBox-bmPWx iaZUuq"
                  data-blade-component="base-box"
                >
                  <span
                    class="StyledBaseText-dVBfTO jKuOWA"
                    data-blade-component="base-text"
                  >
                    ₹
                  </span>
                  <span
                    class="StyledBaseText-dVBfTO chIjgb"
                    data-blade-component="base-text"
                  >
                    1,000
                    .
                  </span>
                  <span
                    class="StyledBaseText-dVBfTO eDQkPo"
                    data-blade-component="base-text"
                  >
                    00
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Collapsible /> should render with CollapsibleLink 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="collapsible"
  >
    <div
      class="BaseBox-bmPWx iBXzln"
      data-blade-component="base-box"
    >
      <button
        aria-controls="collapsible-body-3"
        aria-disabled="false"
        aria-expanded="false"
        class="StyledBaseLinkweb__StyledLink-sc-1yj1z8h-0 kzvYbf"
        data-blade-component="link"
        role="button"
        type="button"
      >
        <span
          class="BaseBox-bmPWx fSbYvl content-container"
          data-blade-component="base-box"
        >
          <span
            class="StyledBaseText-dVBfTO jSaisz"
            data-blade-component="base-text"
          >
            View Price Breakdown
          </span>
          <span
            class="BaseBox-bmPWx dPeROr"
            data-blade-component="base-box"
          >
            <div
              aria-hidden="true"
              class="BaseBox-bmPWx CollapsibleChevronIconweb__StyledCollapsibleChevronIcon-sc-1kwlg5h-0  huMgvz"
              data-blade-component="base-box"
              direction="bottom"
            >
              <svg
                aria-hidden="true"
                class="Svgweb__StyledSvg-vcmjs8-0"
                data-blade-component="icon"
                fill="none"
                height="16px"
                viewBox="0 0 24 24"
                width="16px"
              >
                <path
                  clip-rule="evenodd"
                  d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                  data-blade-component="svg-path"
                  fill="hsla(218, 89%, 51%, 1)"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </span>
        </span>
      </button>
      <div
        aria-hidden="true"
        class="BaseBox-bmPWx"
        data-blade-component="collapsible-body"
        id="collapsible-body-3"
        role="region"
      >
        <div
          class="CollapsibleBodyContentweb__StyledCollapsibleBodyContent-sc-1oi3ngc-0 zckFh"
        >
          <div
            class="BaseBox-bmPWx hgWdUa"
            data-blade-component="box"
          >
            <div
              class="BaseBox-bmPWx lmtAaL"
              data-blade-component="box"
            >
              <p
                class="StyledBaseText-dVBfTO eIdQFo"
                data-blade-component="text"
              >
                Actual amount
              </p>
              <div
                class="BaseBox-bmPWx bcSLaJ"
                data-blade-component="amount"
              >
                <div
                  class="BaseBox-bmPWx iaZUuq"
                  data-blade-component="base-box"
                >
                  <span
                    class="StyledBaseText-dVBfTO jKuOWA"
                    data-blade-component="base-text"
                  >
                    ₹
                  </span>
                  <span
                    class="StyledBaseText-dVBfTO chIjgb"
                    data-blade-component="base-text"
                  >
                    1,000
                    .
                  </span>
                  <span
                    class="StyledBaseText-dVBfTO eDQkPo"
                    data-blade-component="base-text"
                  >
                    00
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
